# h1-analysis

./: CMakeLists.txt  NN_h1_make_dnn_tree_v2.ipynb  NN_h1_reg_plots_subsel_v2_f3.ipynb  NN_h1_reg_v4b.ipynb  README.md  bin-center-corrections-table.txt  calc_acceptance.c  calc_bincentercf_poly.C  calc_reduced_xsec_from_q2_vs_x.c  calc_reduced_xsec_from_q2_vs_x_given_center.c  calc_xsec_vs_q2_from_q2_vs_x.c  cbc-poly-output-h1-bin-centers.root  compare_h1qcdfunc_with_h1.c  cut-and-paste.txt  data-hists.root  data-mc-comp.tex  data-mc-comparisons-v1.ipynb  data_roo_unfold_2d_compare_v2.c  data_roo_unfold_2d_compare_v3.c  data_roo_unfold_2d_compare_v4.c  draw-network.ipynb  draw_2d_slice_error_plots.c  draw_2d_slice_plots.c  draw_2d_slices.c  draw_acceptance.c  draw_mt.c  draw_norad_nom_ratio.c  draw_p_and_s.c  draw_purity_and_stability1.c  draw_q2_reso1.c  draw_reso_vs_log10x_2dh.c  draw_reso_vs_log10y.c  draw_rms_and_mean1.c  draw_ru.c  draw_rxsec_slice_errors.c  draw_rxsec_slices.c  draw_rxsec_slices_bcc.c  draw_rxsec_slices_bcc_given_center.c  draw_simple_comp.c  draw_x_reso1.c  (+62 more)
training_h1_reg_v4b_regression/: keras_metadata.pb  saved_model.pb
training_h1_reg_v4b_regression/variables/: variables.index
